[package]
name = "idax-sys"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Raw FFI bindings to the idax C++ IDA SDK wrapper library"
links = "idax"
build = "build.rs"

[build-dependencies]
bindgen = "0.71"
cc = { version = "1", features = ["parallel"] }

[features]
default = []
