[package]
name = "idax-sys"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Raw FFI bindings to the idax C++ IDA SDK wrapper library"
readme = "README.md"
links = "idax"
build = "build.rs"
include = [
    "src/**/*.rs",
    "build.rs",
    "shim/idax_shim.h",
    "shim/idax_shim.cpp",
    "Cargo.toml",
    "LICENSE",
    "README.md",
]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc", "x86_64-apple-darwin", "aarch64-apple-darwin"]

[build-dependencies]
bindgen = "0.71"
cc = { version = "1", features = ["parallel"] }
cmake = "0.1.57"

[features]
default = []
