[package]
name = "idax"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Safe, idiomatic Rust bindings for the IDA SDK via idax"
readme = "README.md"
build = "build.rs"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc", "x86_64-apple-darwin", "aarch64-apple-darwin"]

[dependencies]
idax-sys = { workspace = true }
thiserror = { workspace = true }
bitflags = { workspace = true }
